deleted file 'txt' and made modifications to 'public/index.html' and 'server.js'

--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
 
             <!-- Announce errors to assistive tech immediately -->
             <p class="error" v-if="loginError" role="alert" aria-live="assertive">{{loginError}}</p>
-            <p class="hint">Use <code>admin/password</code> or <code>user/secret</code></p>
+            <p class="hint">Use <code>admin/12345</code> or <code>user/12345</code></p>
           </form>
         </template>
 
