'LoadLessons' was never called, and should be called after login to fetch lessons for the user. fix: Update index.html to call loadLessons after successful login

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,10 @@
           const data = await res.json();
           token.value = data.token;
           localStorage.setItem('token', token.value);
+          // Switch to shop view and load lessons immediately so the
+          // user sees available lessons after logging in.
           view.value = 'shop';
+          await loadLessons();
         } catch (e) {
           loginError.value = 'Login failed';
         }
